provisioning/k8s/istio-mtls-cluster-strict.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-cluster-strict
  labels:
    app.kubernetes.io/component: istio
    app.kubernetes.io/name: banking-demo
spec:
  mtls:
    mode: STRICT
