provisioning/k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: account
  template:
    metadata:
      labels:
        app.kubernetes.io/name: das-microservice-demo
        app.kubernetes.io/component: account
    spec:
      containers:
        - name: account
          image: europe-west4-docker.pkg.dev/adam-playground-315708/microservice-demo/account:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
        - name: opa
          image: openpolicyagent/opa:0.29.1-envoy
          volumeMounts:
            - readOnly: true
              mountPath: /config
              name: opa-config-vol
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5      # Tune these periods for your environemnt
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?bundle=true  # Include bundle activation in readiness
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          args:
            - "run"
            - "--server"
            - "--ignore=.*"
            - "--config-file=/config/conf.yaml"
            - "--authorization=basic"
            - "--addr=http://127.0.0.1:8181"
            - "--diagnostic-addr=0.0.0.0:8282"
      volumes:
        - name: opa-config-vol
          configMap:
            name: opa-istio-config
---
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app.kubernetes.io/name: das-microservice-demo
    app.kubernetes.io/component: account
spec:
  selector:
    app.kubernetes.io/component: account
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
