provisioning/k8s/status-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: status
  template:
    metadata:
      labels:
        app.kubernetes.io/name: das-microservice-demo
        app.kubernetes.io/component: status
        opa-istio-authz: "yes"
    spec:
      containers:
        - name: status-service
          image: europe-west4-docker.pkg.dev/adam-playground-315708/microservice-demo/status-service:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: status
  labels:
    app.kubernetes.io/name: das-microservice-demo
    app.kubernetes.io/component: status
spec:
  selector:
    app.kubernetes.io/component: status
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
