provisioning/k8s/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: banking-demo-gw
  namespace: istio-system
  labels:
    app.kubernetes.io/component: istio
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.styra-demo.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wildcard.styra-demo.com.certs
    hosts:
    - "*.styra-demo.com"
