provisioning/k8s/portal-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-svc
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portal-vs
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  hosts:
    - banking.styra-demo.com
  gateways:
    - istio-system/banking-demo-gw
  http:
    - match:
        - uri:
            prefix: /portal
      route:
        - destination:
            port:
              number: 80
            host: portal-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deploy
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: portal
      app.kubernetes.io/name: banking-demo
  template:
    metadata:
      labels:
        opa-istio-authz: "true"
        app.kubernetes.io/component: portal
        app.kubernetes.io/name: banking-demo
        
    spec:
      serviceAccountName: portal-sa
      hostPID: false
      hostIPC: false
      hostNetwork: false
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 100

      containers:
        - name: portal
          image: adamsandor83/portal:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false  # do not change
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          
        - name: opa
          image: openpolicyagent/opa:0.34.2-envoy-rootless
          imagePullPolicy: Always
          args:
            - "run"
            - "--server"
            - "--ignore=.*"
            - "--config-file=/config/conf.yaml"
            - "--authorization=basic"
            - "--addr=http://127.0.0.1:8181"
            - "--diagnostic-addr=0.0.0.0:8282"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - all
          volumeMounts:
            - readOnly: true
              mountPath: /config/conf.yaml
              subPath: conf.yaml
              name: opa-config-vol
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?bundle=true
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: opa-config-vol
          configMap:
            name: opa-istio-config
